[tool.poetry]
name = "deploy_webhook"
version = "0.1.0"
description = "A simple backend to manage Docker Swarm deployments"
authors = ["Pavle Portic <pavle.portic@tilda.center>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
argon2-cffi = "^19.2.0"
docker = "^4.1.0"
flask = "^1.1.1"
flask-cors = "^3.0.8"
flask-jwt-extended = "^3.24.1"
flask-migrate = "^2.5.2"
gunicorn = "^20.0.4"
marshmallow = "^3.3.0"
passlib = "^1.7.2"
servicectl = "^0.0.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
